--- a/src/style.css
+++ b/src/style.css
@@ -11,29 +11,20 @@ body {
   align-items: center;
 }
 
-button {
-  border-radius: 10px;
-  border: none;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #8d0a8d;
-  color: #FFF;
-  cursor: pointer;
-  transition: background-color 0.25s;
-  margin-right: 10px;
+main {
+  position: relative;
+  top: 91px;
 }
-button:hover {
-  background-color: #c20ec2;
-}
-
 
 
 .container {
-  max-width: 1000px;
+  max-width: 1620px;
   margin: 0 auto;
-  padding: 3rem 1rem;
+  padding-inline: 30px;
+}
+
+ul {
+  list-style: none;
 }
 
 h1 {
