--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,13 @@
-  * {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+:root {
+  --font-family: "Roboto", sans-serif;
+  --second-family: "Inter", sans-serif;
+  --color-white: #fff;
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,7 +18,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: var(--font-family);
+  overflow-x: hidden;
 }
+
 
 main {
   position: relative;
@@ -18,25 +30,11 @@ main {
 
 
 .container {
-  max-width: 1620px;
+  max-width: 1720px;
   margin: 0 auto;
   padding-inline: 30px;
 }
 
 ul {
   list-style: none;
-}
-
-h1 {
-  text-align: center;
-  color: #2d3748;
-  margin-bottom: 1rem;
-  font-size: 2.5rem;
-}
-
-.subtitle {
-  text-align: center;
-  color: #718096;
-  margin-bottom: 3rem;
-  font-size: 1.2rem;
 }
